--- a/blog.html
+++ b/blog.html
@@ -8,10 +8,10 @@
     <meta content="" name="keywords">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <link rel="stylesheet" href="/public/assets/css/foundation.css">
-    <link rel="stylesheet" href="/public/assets/css/app.css">
-    <script src="/public/assets/js/foundation.js" defer></script>
-    <script src="/public/assets/js/app.js" defer></script><!--[if lt IE 9]>
+    <link rel="stylesheet" href="/assets/css/foundation.css">
+    <link rel="stylesheet" href="/assets/css/app.css">
+    <script src="/assets/js/foundation.js" defer></script>
+    <script src="/assets/js/app.js" defer></script><!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -44,7 +44,7 @@
           <svg class="c-developer__bg">
             <use xlink:href="#stars1"></use>
           </svg>
-          <div class="c-user"><img class="c-user__pic c-user__pic_blog" src="/public/assets/img/avatar.jpg">
+          <div class="c-user"><img class="c-user__pic c-user__pic_blog" src="/assets/img/avatar.jpg">
             <div class="c-section-title c-section-title_blog">Блог</div>
             <div class="c-user__occupation">Cтатьи, которые я написал</div>
           </div>
