--- a/works.html
+++ b/works.html
@@ -8,10 +8,10 @@
     <meta content="" name="keywords">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <link rel="stylesheet" href="/public/assets/css/foundation.css">
-    <link rel="stylesheet" href="/public/assets/css/app.css">
-    <script src="/public/assets/js/foundation.js" defer></script>
-    <script src="/public/assets/js/app.js" defer></script><!--[if lt IE 9]>
+    <link rel="stylesheet" href="/assets/css/foundation.css">
+    <link rel="stylesheet" href="/assets/css/app.css">
+    <script src="/assets/js/foundation.js" defer></script>
+    <script src="/assets/js/app.js" defer></script><!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -44,7 +44,7 @@
           <svg class="c-developer__bg">
             <use xlink:href="#stars1"></use>
           </svg>
-          <div class="c-user"><img class="c-user__pic" src="/public/assets/img/avatar.jpg">
+          <div class="c-user"><img class="c-user__pic" src="/assets/img/avatar.jpg">
             <div class="c-user__name">Максим Шаталов</div>
             <div class="c-user__occupation">Личный сайт веб-разработчика</div>
           </div>
@@ -53,170 +53,87 @@
                       <use xlink:href="/assets/img/sprite.svg#arrow_down"></use>
                     </svg></a>
       </section>
-      <section class="l-section l-about">
-        <div class="l-about__col l-about__col_left">
-          <svg class="l-about__triangle l-about__triangle_left"></svg>
-          <div class="c-section-title-container">
+      <section class="l-section l-works">
+        <div class="l-works__title">
+          <div class="c-section-title-container c-section-title-container_works">
             <svg class="c-section-title-bg">
               <use xlink:href="#stars2"></use>
             </svg>
-            <div class="c-section-title">обо мне</div>
+            <div class="c-section-title">мои работы</div>
           </div>
-          <div class="c-about"><img class="c-about__pic" src="/public/assets/img/user-photo.jpg">
-            <div class="c-block-title">кто я</div>
-            <div class="c-block-text">
-              <p>
-                Я веб разработчик из Москвы.
-                Мне 34 года. Занимаюсь разработкой современных сайтов и приложений.
-                Мне нравится делать интересные и современные проекты.
-              </p>
-              <p>
-                Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
-                Чуть позже я освежу в нём свой контент.
-                А пока посмотрите, как тут всё классно и красиво!
-              </p>
-            </div>
-          </div>
+          <svg class="l-works-title__triangles"></svg>
         </div>
-        <div class="l-about__col l-about__col_right">
-          <svg class="l-about__triangle l-about__triangle_right"></svg>
-          <div class="c-block-title">чем я могу быть вам полезен</div>
-          <div class="c-block-text">
-            <p>
-              Больше всего меня привлекет Backend разработка,
-              но я также знаком и могу решать не сложные задачи на Frontend.
-            </p>
-          </div>
-          <div class="c-skills">
-            <ul class="c-skills-group">
-              <li class="c-skills-group__item">
-                <div class="c-skills-group__title">Frontend</div>
-                <ul class="c-skills-list">
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">HTML5</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">CSS3</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">JavaScript &amp; jQuery</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">WPF</div>
-                    </div>
-                  </li>
-                </ul>
-                <div class="c-skills-group__title">Backend</div>
-                <ul class="c-skills-list">
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">PHP &amp; Laravel</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">mySQL</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">Node.js &amp; npm</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">Mongo.db</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">C#</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">SQL Server</div>
-                    </div>
-                  </li>
-                </ul>
-                <div class="c-skills-group__title">Workflow</div>
-                <ul class="c-skills-list">
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">Git</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">Gulp</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">Webpack</div>
-                    </div>
-                  </li>
-                  <li class="c-skills-list__item">
-                    <div class="c-skill">
-                      <svg class="c-skill__circle"></svg>
-                      <div class="c-skill__title">Artisan</div>
-                    </div>
-                  </li>
-                </ul>
-              </li>
+        <div class="c-slider">
+          <ul class="c-slider__list">
+            <li class="c-slider__item">
+              <div class="c-slider-pic"><img class="c-slider-img" src="/assets/img/work-1.png"></div>
+              <div class="c-slider__description">
+                <div class="c-block-title c-block-title_left">сайт школы онлайн образования</div>
+                <div class="c-slider-item__skills">HTML, CSS, JavaScript</div><a class="c-slider-btn" href="#">
+                          <svg class="c-slider-btn__icon">
+                            <use xlink:href="/assets/img/sprite.svg#link"></use>
+                          </svg>Посмотреть сайт</a>
+              </div>
+            </li>
+          </ul>
+          <div class="c-pager">
+            <ul class="c-pager__list">
+              <li class="c-pager__item"></li>
+              <li class="c-pager__item"></li>
+              <li class="c-pager__item"></li>
+              <li class="c-pager__item"></li>
             </ul>
           </div>
+                  <svg class="c-slider__button c-slider__button_prev">
+                    <use xlink:href="/assets/img/sprite.svg#arrow_down"></use>
+                  </svg>
+                  <svg class="c-slider__button c-slider__button_next">
+                    <use xlink:href="/assets/img/sprite.svg#arrow_down"></use>
+                  </svg>
         </div>
       </section>
-      <section class="l-section l-map">
-        <div class="l-map__widget"></div>
-        <div class="l-contacts">
-          <div class="c-block-title">контакты</div>
-          <div class="c-contacts-list-wrapper c-contacts-list-wrapper_map">
-            <ul class="c-contacts-list">
-              <li class="c-contacts__item"><a class="c-contacts__link" href="skype:maxim.shatalov04" target="_blank">
-                            <svg class="c-contacts__icon">
-                              <use xlink:href="/assets/img/sprite.svg#skype_n"></use>
-                            </svg>
-                  <div class="c-contacts__link-content">maxim.shatalov04</div></a></li>
-              <li class="c-contacts__item"><a class="c-contacts__link" href="mailto:shatalov04@gmail.com" target="_blank">
-                            <svg class="c-contacts__icon">
-                              <use xlink:href="/assets/img/sprite.svg#envelope_n"></use>
-                            </svg>
-                  <div class="c-contacts__link-content">shatalov04@gmail.com</div></a></li>
-              <li class="c-contacts__item"><a class="c-contacts__link" href="tel:+79162142371" target="_blank">
-                            <svg class="c-contacts__icon">
-                              <use xlink:href="/assets/img/sprite.svg#phone_n"></use>
-                            </svg>
-                  <div class="c-contacts__link-content">+7 916 214 23 71</div></a></li>
-              <li class="c-contacts__item"><a class="c-contacts__link" href="https://yandex.ru/maps/10740/mytischi/?ll=37.738442%2C55.901499&amp;z=17&amp;mode=whatshere&amp;whatshere%5Bpoint%5D=37.738507%2C55.900830&amp;whatshere%5Bzoom%5D=17" target="_blank">
-                            <svg class="c-contacts__icon">
-                              <use xlink:href="/assets/img/sprite.svg#map_n"></use>
-                            </svg>
-                  <div class="c-contacts__link-content">г.Мытищи, Октябрьский проспект, 6А</div></a></li>
-            </ul>
+      <section class="l-section l-yells">
+        <div class="l-yells__title">
+          <div class="c-section-title-container c-section-title-container_yells">
+            <svg class="c-section-title-bg">
+              <use xlink:href="#stars3"></use>
+            </svg>
+            <div class="c-section-title">что обо мне говорят</div>
           </div>
         </div>
+        <div class="c-yells">
+          <ul class="c-yells__list">
+            <li class="c-yell"><img class="c-yell__pic" src="/assets/img/yells-1.jpg">
+              <div class="c-yell__content c-yell__text">Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! Выдержал самые тяжелые испытания в условиях жестких дедлайнов и бессонных ночей!</div>
+              <div class="c-yell__persona">
+                <div class="c-yell__persona-name">Ковальчук Дмитрий</div>
+                <div class="c-yell__persona-occupation c-yell__text">- основатель Loftshcool</div>
+              </div>
+            </li>
+            <li class="c-yell"><img class="c-yell__pic" src="/assets/img/yells-2.jpg">
+              <div class="c-yell__content c-yell__text">Этот код выдержит любые испытания. Только, пожалуйста, не загружайте сайт на слишком старых браузерах!</div>
+              <div class="c-yell__persona">
+                <div class="c-yell__persona-name">Сабанцев Владимир</div>
+                <div class="c-yell__persona-occupation c-yell__text">- преподаватель</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="c-form-container c-form-container_yells">
+          <form class="c-form" id="yells-form">
+            <div class="c-block-title c-block-title_white">связаться со мной</div>
+            <input class="c-form__input" type="text" placeholder="Ваше имя">
+            <input class="c-form__input" type="email" placeholder="Ваше email">
+            <textarea class="c-form__input c-form__input_textarea" placeholder="Ваше сообщение"></textarea>
+          </form>
+          <div class="c-form__panel">
+            <button class="c-form__button c-form__button_highlighted" type="submit" form="yells-form">Отправить</button>
+            <button class="c-form__button">Очистить</button>
+          </div>
+        </div><a class="c-section__btn c-section__btn_prev">
+                  <svg class="c-section__icon">
+                    <use xlink:href="/assets/img/sprite.svg#arrow_down"></use>
+                  </svg></a>
         <footer class="c-footer">
           <ul class="c-footer-list">
             <div class="c-footer-list__item">
@@ -286,11 +203,11 @@
             stroke-width:0;
         }
         .stars__circle2 {
-            fill: #004cd1;
+            fill: #fff;
             stroke-width: 0;
         }
         .stars__circle3 {
-            fill: #474b57;
+            fill: #fff;
             stroke-width: 0;
         }
       </style>
@@ -314,17 +231,19 @@
       </symbol>
     </svg>
     <svg class="about__svg hide">
-      <symbol viewBox="0 0 184.4 119.89" id="stars2">
-        <polyline points="105.69 74.32 69.49 23.82 180.09 47.32 142.99 4.32 69.49 23.82 4.29 105.72 51.09 76.42 105.69 74.32 163.99 115.62"></polyline>
-        <line x1="142.99" y1="4.32" x2="163.99" y2="115.62"></line>
-        <circle class="stars__circle2" cx="4.29" cy="105.72" r="4.29"></circle>
-        <circle class="stars__circle2" cx="51.09" cy="76.42" r="1.87"></circle>
-        <circle class="stars__circle2" cx="105.69" cy="74.32" r="4.78"></circle>
-        <circle class="stars__circle2" cx="163.99" cy="115.62" r="4.27"></circle>
-        <circle class="stars__circle2" cx="180.09" cy="47.32" r="4.31"></circle>
-        <circle class="stars__circle2" cx="142.99" cy="4.32" r="4.32"></circle>
-        <circle class="stars__circle2" cx="69.49" cy="23.82" r="2.79"></circle>
-      </symbol>
+      <svg class="about__svg hide">
+        <symbol viewBox="0 0 184.4 119.89" id="stars2">
+          <polyline points="105.69 74.32 69.49 23.82 180.09 47.32 142.99 4.32 69.49 23.82 4.29 105.72 51.09 76.42 105.69 74.32 163.99 115.62"></polyline>
+          <line x1="142.99" y1="4.32" x2="163.99" y2="115.62"></line>
+          <circle class="stars__circle2" cx="4.29" cy="105.72" r="4.29"></circle>
+          <circle class="stars__circle2" cx="51.09" cy="76.42" r="1.87"></circle>
+          <circle class="stars__circle2" cx="105.69" cy="74.32" r="4.78"></circle>
+          <circle class="stars__circle2" cx="163.99" cy="115.62" r="4.27"></circle>
+          <circle class="stars__circle2" cx="180.09" cy="47.32" r="4.31"></circle>
+          <circle class="stars__circle2" cx="142.99" cy="4.32" r="4.32"></circle>
+          <circle class="stars__circle2" cx="69.49" cy="23.82" r="2.79"></circle>
+        </symbol>
+      </svg>
     </svg>
     <svg class="about__svg hide">
       <symbol viewBox="0 0 103.03 124.03" id="stars3">
