--- a/index.html
+++ b/index.html
@@ -15,79 +15,81 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <section class="l-section l-welcome"><a class="l-welcome__auth-btn" href="#">Авторизоваться</a>
-      <div class="l-frame-wrapper l-frame-wrapper_welcome">
-        <div class="c-frame">
-          <div class="c-user"><img class="c-user__pic" src="./assets/img/avatar.jpg">
-            <div class="c-user__name">Максим Шаталов</div>
-            <div class="c-user__occupation">Личный сайт веб-разработчика</div>
+    <section class="l-section l-welcome"><a class="l-welcome__auth-btn" data-flip="toggle" href="#">Авторизоваться</a>
+      <div class="l-flipper">
+        <div class="l-frame-wrapper l-frame-wrapper_welcome">
+          <div class="c-frame">
+            <div class="c-user"><img class="c-user__pic" src="./assets/img/avatar.jpg">
+              <div class="c-user__name">Максим Шаталов</div>
+              <div class="c-user__occupation">Личный сайт веб-разработчика</div>
+            </div>
+            <div class="c-socials-wrapper c-socials-wrapper_welcome">
+              <ul class="c-socials">
+                <li class="c-socials__item"><a class="c-socials__link" href="http://vk.com/id224269077" target="_blank">
+                                  <svg class="c-socials__icon">
+                                    <use xlink:href="./assets/img/sprite.svg#vk"></use>
+                                  </svg></a></li>
+                <li class="c-socials__item"><a class="c-socials__link" href="https://github.com/furzeal" target="_blank">
+                                  <svg class="c-socials__icon">
+                                    <use xlink:href="./assets/img/sprite.svg#github"></use>
+                                  </svg></a></li>
+                <li class="c-socials__item"><a class="c-socials__link" href="https://ru.linkedin.com/in/maxim-shatalov-67715b55" target="_blank">
+                                  <svg class="c-socials__icon">
+                                    <use xlink:href="./assets/img/sprite.svg#in"></use>
+                                  </svg></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="c-socials-wrapper c-socials-wrapper_welcome">
-            <ul class="c-socials">
-              <li class="c-socials__item"><a class="c-socials__link" href="http://vk.com/id224269077" target="_blank">
-                              <svg class="c-socials__icon">
-                                <use xlink:href="./assets/img/sprite.svg#vk"></use>
-                              </svg></a></li>
-              <li class="c-socials__item"><a class="c-socials__link" href="https://github.com/furzeal" target="_blank">
-                              <svg class="c-socials__icon">
-                                <use xlink:href="./assets/img/sprite.svg#github"></use>
-                              </svg></a></li>
-              <li class="c-socials__item"><a class="c-socials__link" href="https://ru.linkedin.com/in/maxim-shatalov-67715b55" target="_blank">
-                              <svg class="c-socials__icon">
-                                <use xlink:href="./assets/img/sprite.svg#in"></use>
-                              </svg></a></li>
+          <nav class="c-nav-panel">
+            <ul class="c-nav-panel__list">
+              <li class="c-nav-panel__button"><a class="c-nav-panel__link" href="works.html">Мои работы</a></li>
+              <li class="c-nav-panel__button c-nav-panel__button_notfirst"><a class="c-nav-panel__link" href="about.html">Обо мне</a></li>
+              <li class="c-nav-panel__button c-nav-panel__button_notfirst"><a class="c-nav-panel__link" href="blog.html">Блог</a></li>
             </ul>
-          </div>
+          </nav>
         </div>
-        <nav class="c-nav-panel">
-          <ul class="c-nav-panel__list">
-            <li class="c-nav-panel__button"><a class="c-nav-panel__link" href="works.html">Мои работы</a></li>
-            <li class="c-nav-panel__button c-nav-panel__button_notfirst"><a class="c-nav-panel__link" href="about.html">Обо мне</a></li>
-            <li class="c-nav-panel__button c-nav-panel__button_notfirst"><a class="c-nav-panel__link" href="blog.html">Блог</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="l-frame-wrapper l-frame-wrapper_auth">
-        <div class="c-form-container c-form-container_welcome">
-          <form class="c-form" id="yells-form">
-            <div class="c-block-title c-block-title_welcome">авторизируйтесь</div>
-            <div class="c-form__input-wrapper">
-              <input class="c-form__input c-form__input_bg_white" type="text" placeholder="Логин">
-                          <svg class="c-form__input-icon">
-                            <use xlink:href="./assets/img/sprite.svg#login"></use>
-                          </svg>
-            </div>
-            <div class="c-form__input-wrapper">
-              <input class="c-form__input c-form__input_bg_white" type="email" placeholder="Пароль">
-                          <svg class="c-form__input-icon">
-                            <use xlink:href="./assets/img/sprite.svg#password"></use>
-                          </svg>
-            </div>
-            <div class="c-checkbox">
-              <label class="c-label c-checkbox__label">Я человек
-                            <svg class="c-checkbox__checked-icon">
-                              <use xlink:href="./assets/img/sprite.svg#check"></use>
-                            </svg>
-                <input class="c-checkbox__input" type="checkbox" id="is-human" name="is-human">
-              </label>
-            </div>
-            <div class="c-form__text">Вы точно не робот?</div>
-            <div class="c-radiobutton-block">
-              <div class="c-radiobutton c-radiobutton_active">
-                <label class="c-label c-radiobutton__label">Да
-                  <input class="c-radiobutton__input" type="radio" id="is-human_true" name="is-human-value" value="yes" required>
+        <div class="l-frame-wrapper l-frame-wrapper_auth">
+          <div class="c-form-container c-form-container_welcome">
+            <form class="c-form" id="yells-form">
+              <div class="c-block-title c-block-title_welcome">авторизируйтесь</div>
+              <div class="c-form__input-wrapper">
+                <input class="c-form__input c-form__input_bg_white" type="text" placeholder="Логин">
+                              <svg class="c-form__input-icon">
+                                <use xlink:href="./assets/img/sprite.svg#login"></use>
+                              </svg>
+              </div>
+              <div class="c-form__input-wrapper">
+                <input class="c-form__input c-form__input_bg_white" type="email" placeholder="Пароль">
+                              <svg class="c-form__input-icon">
+                                <use xlink:href="./assets/img/sprite.svg#password"></use>
+                              </svg>
+              </div>
+              <div class="c-checkbox">
+                <label class="c-label c-checkbox__label">Я человек
+                                <svg class="c-checkbox__checked-icon">
+                                  <use xlink:href="./assets/img/sprite.svg#check"></use>
+                                </svg>
+                  <input class="c-checkbox__input" type="checkbox" id="is-human" name="is-human">
                 </label>
               </div>
-              <div class="c-radiobutton">
-                <label class="c-label c-radiobutton__label">Не уверен
-                  <input class="c-radiobutton__input" type="radio" id="is-human_false" name="is-human-value" value="no" required>
-                </label>
+              <div class="c-form__text">Вы точно не робот?</div>
+              <div class="c-radiobutton-block">
+                <div class="c-radiobutton c-radiobutton_active">
+                  <label class="c-label c-radiobutton__label">Да
+                    <input class="c-radiobutton__input" type="radio" id="is-human_true" name="is-human-value" value="yes" required>
+                  </label>
+                </div>
+                <div class="c-radiobutton">
+                  <label class="c-label c-radiobutton__label">Не уверен
+                    <input class="c-radiobutton__input" type="radio" id="is-human_false" name="is-human-value" value="no" required>
+                  </label>
+                </div>
               </div>
+            </form>
+            <div class="c-form__panel">
+              <button class="c-form__button" type="submit" form="yells-form" data-flip="toggle">На главную</button>
+              <button class="c-form__button c-form__button_notfirst">Войти</button>
             </div>
-          </form>
-          <div class="c-form__panel">
-            <button class="c-form__button" type="submit" form="yells-form">На главную</button>
-            <button class="c-form__button c-form__button_notfirst">Войти</button>
           </div>
         </div>
       </div>
