--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">HTML5</div>
@@ -128,7 +128,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">CSS3</div>
@@ -139,7 +139,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">JavaScript &amp; jQuery</div>
@@ -153,7 +153,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">PHP &amp; Laravel</div>
@@ -164,7 +164,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">mySQL</div>
@@ -175,7 +175,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">Node.js &amp; npm</div>
@@ -186,7 +186,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">Mongo.db</div>
@@ -197,7 +197,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">C#</div>
@@ -208,7 +208,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">SQL Server</div>
@@ -222,7 +222,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">Git</div>
@@ -233,7 +233,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">Gulp</div>
@@ -244,7 +244,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">Webpack</div>
@@ -255,7 +255,7 @@
                         <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80 100" viewBox="0 0 100 100" preserveAspectRatio="none">
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
                           <circle cx="50" cy="50" r="40"></circle>
                         </svg>
                         <div class="c-skill__title">Artisan</div>
